release 1.0-ea (2008-10-xx)
- When implicit views are enabled allow deferral to implicit GET when
  non of the explicit GETs match. Previously if there were any explicit
  GETs non-matching or otherwise no deferral occurred.
- Fixed issue 115.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=115
  UriBulder.buildFromEncoded does not work correctly for query parameters
  that contain '+' characters.
- Fixed issue 114.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=114
  When URI building with template parameters and no explicit port is declared
  then -1 occurs as the port component in the built URI.
- Support for EJB stateless session beans as resource classes.
  A local or remote interface may be annotated with JAX-RS annotations, for
  example the interface may be annotated with @Path to make the session bean
  a root resource class.
  When an application is deployed Jersey will attempt to look up any registeted
  root resource classes that are interfaces using JNDI where the fully qualified
  class name is the JNDI name. If an instance is found then the class is removed
  from registered set of classes and the instance is added to the registered set
  of singletons.
- Fixed issue 112
  https://jersey.dev.java.net/issues/show_bug.cgi?id=112
  JSON now works with JAXB annotated @XmlRootElement beans where
  the XML element name is declared by the annotation value.
- Improved JavaDoc of Jersey API.
- Support for JAXB with FastInfoset using the media type
  "application/fastinfoset".
- Content-Encoding using GZIP filters, see:
    com.sun.jersey.api.client.filter.GZIPContentEncodingFilter
    com.sun.jersey.api.container.filter.GZIPContentEncodingFilter
- Fixed issue 33
  https://jersey.dev.java.net/issues/show_bug.cgi?id=33
  Improve the scope of resource class validation and warnings.
- Fixed issue 109
  https://jersey.dev.java.net/issues/show_bug.cgi?id=109
  The LW HTTP server uses the Executors.newCachedThreadPool() as the
  default executor.