@@ -1,4 +1,6 @@
 release 1.0-ea (2008-10-xx)
+- Fixed issue with bridge methods being included in the analysis
+  of resource classes.
 - When implicit views are enabled allow deferral to implicit GET when
   non of the explicit GETs match. Previously if there were any explicit
   GETs non-matching or otherwise no deferral occurred.
